# cpp-learn

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/coverage/: CMakeLists.txt
scripts/appveyor/: build.ps1  install.ps1  test.ps1
scripts/travis/: build.sh  install.sh
src/input/: CMakeLists.txt
src/input/include/: istream_reader.hpp
src/input/src/: istream_reader.cpp
src/input_reader/: CMakeLists.txt
src/input_reader/include/: input_reader.hpp
src/input_reader/src/: input_reader.cpp
src/oxbridge2camford/: CMakeLists.txt
src/oxbridge2camford/src/: main.cpp
src/oxbridge2camford_lib/: CMakeLists.txt
src/oxbridge2camford_lib/include/: oxbridge2camford_lib.hpp
src/oxbridge2camford_lib/src/: oxbridge2camford_lib.cpp
src/task1/: CMakeLists.txt
src/task1/src/: main.cpp
src/task1_lib/: CMakeLists.txt
src/task1_lib/include/: task1_lib.hpp
src/task1_lib/src/: task1_lib.cpp
src/task2/: CMakeLists.txt
src/task2/src/: main.cpp
src/task2_lib/: CMakeLists.txt
src/task2_lib/include/: task2_lib.hpp
src/task2_lib/src/: task2_lib.cpp
tests/input_reader_test/: CMakeLists.txt
tests/input_reader_test/src/: input_reader_test.cpp
tests/input_test/: CMakeLists.txt
tests/input_test/src/: istream_reader_test.cpp
tests/oxbridge2camford_test/: CMakeLists.txt
tests/oxbridge2camford_test/src/: oxbridge2camford_test.cpp
tests/task1_test/: CMakeLists.txt
tests/task1_test/src/: task1_test.cpp
tests/task2_test/: CMakeLists.txt
tests/task2_test/src/: task2_test.cpp
